--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^10.0.0",
+    "@types/uuid": "^11.0.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
     "dotenv": "^17.2.3",
@@ -20,7 +21,8 @@
     "multer": "^2.0.2",
     "mysql2": "^3.15.2",
     "nodemailer": "^7.0.9",
-    "streamifier": "^0.1.1"
+    "streamifier": "^0.1.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
